# kubeforward

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: error.rs  main.rs  utils.rs
src/kube/: container.rs  list.rs  listener.rs  mod.rs  ns.rs  pod.rs
src/scenario/: context.rs  exec.rs  forward.rs  mod.rs  namespace.rs
