[package]
name = "kubexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.2.1" }
clap = { version = "3.1.10", features = ["derive"] }
kube = { version = "0.71.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1.17.0", features = ["full"] }
