[package]
name = "kubeforward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.2.1" }
clap = { version = "3.1.10", features = ["derive"] }
kube = { version = "0.71.0", features = ["client", "derive", "runtime", "ws"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.12"
futures-util = "0.3.21"
simple_logger = "2.1"
log = "0.4"
